--- a/results/classifica.html
+++ b/results/classifica.html
@@ -1,143 +1,123 @@
 <html><head><title>Classifica dei Simboli</title></head><body>
 <h1>Classifica dei Simboli in Base alla Probabilità di Crescita</h1>
 <table border='1'><tr><th>Simbolo</th><th>Probabilità</th></tr>
-<tr><td>BMY</td><td>99.92%</td></tr>
-<tr><td>JNJ</td><td>99.89%</td></tr>
-<tr><td>GBPUSD</td><td>99.86%</td></tr>
-<tr><td>PSA</td><td>99.76%</td></tr>
-<tr><td>EURUSD</td><td>99.76%</td></tr>
-<tr><td>ZTS</td><td>99.73%</td></tr>
-<tr><td>TRXUSD</td><td>99.71%</td></tr>
-<tr><td>EURNZD</td><td>99.71%</td></tr>
-<tr><td>AMGN</td><td>99.70%</td></tr>
-<tr><td>EURAUD</td><td>99.66%</td></tr>
-<tr><td>AON</td><td>99.61%</td></tr>
-<tr><td>MRK</td><td>99.61%</td></tr>
-<tr><td>KO</td><td>99.60%</td></tr>
-<tr><td>AUDUSD</td><td>99.51%</td></tr>
-<tr><td>EURCAD</td><td>99.49%</td></tr>
-<tr><td>BDX</td><td>99.38%</td></tr>
-<tr><td>PEP</td><td>99.34%</td></tr>
-<tr><td>USDTUSD</td><td>99.33%</td></tr>
-<tr><td>XAUUSD</td><td>99.18%</td></tr>
-<tr><td>FIS</td><td>99.16%</td></tr>
-<tr><td>OJUSX</td><td>99.11%</td></tr>
-<tr><td>SO</td><td>98.93%</td></tr>
-<tr><td>CME</td><td>98.89%</td></tr>
-<tr><td>DUK</td><td>98.86%</td></tr>
-<tr><td>CL</td><td>98.75%</td></tr>
-<tr><td>LMT</td><td>98.50%</td></tr>
-<tr><td>ABT</td><td>98.48%</td></tr>
-<tr><td>D</td><td>98.36%</td></tr>
-<tr><td>MMC</td><td>98.30%</td></tr>
-<tr><td>LNTH</td><td>98.29%</td></tr>
-<tr><td>LLY</td><td>98.26%</td></tr>
-<tr><td>NZDUSD</td><td>98.11%</td></tr>
-<tr><td>ADBE</td><td>97.92%</td></tr>
-<tr><td>XAGUSD</td><td>97.76%</td></tr>
-<tr><td>EURGBP</td><td>97.71%</td></tr>
-<tr><td>ADP</td><td>97.35%</td></tr>
-<tr><td>SYK</td><td>97.19%</td></tr>
-<tr><td>TMUS</td><td>95.94%</td></tr>
-<tr><td>AEP</td><td>95.43%</td></tr>
-<tr><td>GCUSD</td><td>94.93%</td></tr>
-<tr><td>T</td><td>89.42%</td></tr>
-<tr><td>ICE</td><td>14.05%</td></tr>
-<tr><td>V</td><td>8.56%</td></tr>
-<tr><td>META</td><td>6.31%</td></tr>
-<tr><td>CSCO</td><td>4.81%</td></tr>
-<tr><td>JPM</td><td>4.78%</td></tr>
-<tr><td>NAAS</td><td>4.34%</td></tr>
-<tr><td>MSFT</td><td>4.17%</td></tr>
-<tr><td>BTCUSD</td><td>3.92%</td></tr>
-<tr><td>NFLX</td><td>3.80%</td></tr>
-<tr><td>USDCAD</td><td>3.59%</td></tr>
-<tr><td>DOGEUSD</td><td>3.57%</td></tr>
-<tr><td>AMZN</td><td>3.56%</td></tr>
-<tr><td>GS</td><td>3.24%</td></tr>
-<tr><td>IBM</td><td>3.21%</td></tr>
-<tr><td>SCHL</td><td>3.08%</td></tr>
-<tr><td>RBUSD</td><td>2.88%</td></tr>
-<tr><td>DE</td><td>2.87%</td></tr>
-<tr><td>XTZUSD</td><td>2.78%</td></tr>
-<tr><td>WMT</td><td>2.62%</td></tr>
-<tr><td>ETHUSD</td><td>2.50%</td></tr>
-<tr><td>HON</td><td>2.41%</td></tr>
-<tr><td>CHFJPY</td><td>2.37%</td></tr>
-<tr><td>AAPL</td><td>2.17%</td></tr>
-<tr><td>XRPUSD</td><td>2.06%</td></tr>
-<tr><td>ADI</td><td>2.02%</td></tr>
-<tr><td>TROW</td><td>2.01%</td></tr>
-<tr><td>DIS</td><td>1.97%</td></tr>
-<tr><td>INTC</td><td>1.83%</td></tr>
-<tr><td>PLD</td><td>1.76%</td></tr>
-<tr><td>C</td><td>1.70%</td></tr>
-<tr><td>NRG</td><td>1.68%</td></tr>
-<tr><td>EOSUSD</td><td>1.67%</td></tr>
-<tr><td>ADAUSD</td><td>1.66%</td></tr>
-<tr><td>SBUX</td><td>1.60%</td></tr>
-<tr><td>USB</td><td>1.58%</td></tr>
-<tr><td>BTDR</td><td>1.50%</td></tr>
-<tr><td>EW</td><td>1.46%</td></tr>
-<tr><td>ETCUSD</td><td>1.40%</td></tr>
-<tr><td>COST</td><td>1.40%</td></tr>
-<tr><td>NEOUSD</td><td>1.40%</td></tr>
-<tr><td>PNC</td><td>1.40%</td></tr>
-<tr><td>AUDCAD</td><td>1.35%</td></tr>
-<tr><td>CVS</td><td>1.26%</td></tr>
-<tr><td>EURCHF</td><td>1.20%</td></tr>
-<tr><td>ORCL</td><td>1.18%</td></tr>
-<tr><td>GE</td><td>1.17%</td></tr>
-<tr><td>TJX</td><td>1.15%</td></tr>
-<tr><td>EL</td><td>1.09%</td></tr>
-<tr><td>ZCUSX</td><td>1.06%</td></tr>
-<tr><td>CCUSD</td><td>1.03%</td></tr>
-<tr><td>ZECUSD</td><td>1.03%</td></tr>
-<tr><td>PFE</td><td>1.02%</td></tr>
-<tr><td>LOW</td><td>1.02%</td></tr>
-<tr><td>HD</td><td>1.00%</td></tr>
-<tr><td>AUDJPY</td><td>0.98%</td></tr>
-<tr><td>ACN</td><td>0.95%</td></tr>
-<tr><td>BNBUSD</td><td>0.95%</td></tr>
-<tr><td>BKNG</td><td>0.94%</td></tr>
-<tr><td>TSLA</td><td>0.81%</td></tr>
-<tr><td>CAT</td><td>0.79%</td></tr>
-<tr><td>ATOMUSD</td><td>0.77%</td></tr>
-<tr><td>MS</td><td>0.75%</td></tr>
-<tr><td>PYPL</td><td>0.71%</td></tr>
-<tr><td>GOOGL</td><td>0.70%</td></tr>
-<tr><td>TGT</td><td>0.70%</td></tr>
-<tr><td>EURJPY</td><td>0.67%</td></tr>
-<tr><td>CRM</td><td>0.60%</td></tr>
-<tr><td>XLMUSD</td><td>0.51%</td></tr>
-<tr><td>AXP</td><td>0.50%</td></tr>
-<tr><td>BCHUSD</td><td>0.47%</td></tr>
-<tr><td>ZSUSX</td><td>0.44%</td></tr>
-<tr><td>NVDA</td><td>0.43%</td></tr>
-<tr><td>NOW</td><td>0.40%</td></tr>
-<tr><td>GM</td><td>0.35%</td></tr>
-<tr><td>CADJPY</td><td>0.32%</td></tr>
-<tr><td>USDJPY</td><td>0.31%</td></tr>
-<tr><td>MCD</td><td>0.29%</td></tr>
-<tr><td>CVX</td><td>0.29%</td></tr>
-<tr><td>XMRUSD</td><td>0.29%</td></tr>
-<tr><td>APD</td><td>0.28%</td></tr>
-<tr><td>NKE</td><td>0.28%</td></tr>
-<tr><td>HE</td><td>0.24%</td></tr>
-<tr><td>NSC</td><td>0.24%</td></tr>
-<tr><td>GBPCHF</td><td>0.21%</td></tr>
-<tr><td>DASHUSD</td><td>0.21%</td></tr>
-<tr><td>QCOM</td><td>0.20%</td></tr>
-<tr><td>SCHW</td><td>0.20%</td></tr>
-<tr><td>INTU</td><td>0.16%</td></tr>
-<tr><td>GBPJPY</td><td>0.14%</td></tr>
-<tr><td>GBPJPY</td><td>0.14%</td></tr>
-<tr><td>FDX</td><td>0.10%</td></tr>
-<tr><td>USDCHF</td><td>0.10%</td></tr>
-<tr><td>LINKUSD</td><td>0.06%</td></tr>
-<tr><td>ITW</td><td>0.05%</td></tr>
-<tr><td>XOM</td><td>0.05%</td></tr>
-<tr><td>CTUSX</td><td>0.05%</td></tr>
-<tr><td>LTCUSD</td><td>0.04%</td></tr>
-<tr><td>NIO</td><td>0.02%</td></tr>
+<tr><td>MDT</td><td>99.99%</td></tr>
+<tr><td>GBPUSD</td><td>99.98%</td></tr>
+<tr><td>ZTS</td><td>99.96%</td></tr>
+<tr><td>BRK.A</td><td>99.50%</td></tr>
+<tr><td>KO</td><td>99.50%</td></tr>
+<tr><td>MO</td><td>99.50%</td></tr>
+<tr><td>USDTUSD</td><td>99.50%</td></tr>
+<tr><td>VZ</td><td>99.45%</td></tr>
+<tr><td>NEE</td><td>99.44%</td></tr>
+<tr><td>AEP</td><td>99.40%</td></tr>
+<tr><td>CL</td><td>99.37%</td></tr>
+<tr><td>AMGN</td><td>99.20%</td></tr>
+<tr><td>BLK</td><td>99.00%</td></tr>
+<tr><td>CME</td><td>99.00%</td></tr>
+<tr><td>MMC</td><td>99.00%</td></tr>
+<tr><td>NZDUSD</td><td>99.00%</td></tr>
+<tr><td>PEP</td><td>98.73%</td></tr>
+<tr><td>PSA</td><td>98.71%</td></tr>
+<tr><td>MRK</td><td>98.68%</td></tr>
+<tr><td>ANTM</td><td>98.50%</td></tr>
+<tr><td>BDX</td><td>98.50%</td></tr>
+<tr><td>SO</td><td>98.50%</td></tr>
+<tr><td>JNJ</td><td>98.34%</td></tr>
+<tr><td>EURUSD</td><td>98.00%</td></tr>
+<tr><td>TMUS</td><td>97.98%</td></tr>
+<tr><td>LLY</td><td>97.98%</td></tr>
+<tr><td>ADP</td><td>97.47%</td></tr>
+<tr><td>SYK</td><td>97.25%</td></tr>
+<tr><td>ABT</td><td>97.00%</td></tr>
+<tr><td>AUDUSD</td><td>96.50%</td></tr>
+<tr><td>FIS</td><td>95.66%</td></tr>
+<tr><td>DUK</td><td>95.64%</td></tr>
+<tr><td>BA</td><td>94.75%</td></tr>
+<tr><td>D</td><td>93.46%</td></tr>
+<tr><td>BMY</td><td>90.19%</td></tr>
+<tr><td>EURGBP</td><td>88.93%</td></tr>
+<tr><td>PM</td><td>87.63%</td></tr>
+<tr><td>T</td><td>86.00%</td></tr>
+<tr><td>ADBE</td><td>79.50%</td></tr>
+<tr><td>LMT</td><td>73.58%</td></tr>
+<tr><td>AON</td><td>71.24%</td></tr>
+<tr><td>ICE</td><td>25.81%</td></tr>
+<tr><td>PLD</td><td>20.20%</td></tr>
+<tr><td>GS</td><td>14.40%</td></tr>
+<tr><td>ISRG</td><td>14.12%</td></tr>
+<tr><td>UNH</td><td>13.58%</td></tr>
+<tr><td>LOW</td><td>13.30%</td></tr>
+<tr><td>ADI</td><td>9.44%</td></tr>
+<tr><td>PFE</td><td>7.04%</td></tr>
+<tr><td>CSCO</td><td>7.00%</td></tr>
+<tr><td>AXP</td><td>6.61%</td></tr>
+<tr><td>MMM</td><td>6.25%</td></tr>
+<tr><td>META</td><td>5.76%</td></tr>
+<tr><td>JPM</td><td>5.62%</td></tr>
+<tr><td>BKNG</td><td>5.55%</td></tr>
+<tr><td>GM</td><td>5.22%</td></tr>
+<tr><td>USDCAD</td><td>5.00%</td></tr>
+<tr><td>GOOGL</td><td>4.83%</td></tr>
+<tr><td>CI</td><td>4.82%</td></tr>
+<tr><td>COST</td><td>4.52%</td></tr>
+<tr><td>V</td><td>4.50%</td></tr>
+<tr><td>TJX</td><td>4.18%</td></tr>
+<tr><td>WMT</td><td>4.00%</td></tr>
+<tr><td>APD</td><td>3.68%</td></tr>
+<tr><td>HON</td><td>3.67%</td></tr>
+<tr><td>CAT</td><td>3.55%</td></tr>
+<tr><td>EW</td><td>3.42%</td></tr>
+<tr><td>NVDA</td><td>3.31%</td></tr>
+<tr><td>TXN</td><td>3.00%</td></tr>
+<tr><td>ACN</td><td>2.85%</td></tr>
+<tr><td>SPGI</td><td>2.75%</td></tr>
+<tr><td>NRG</td><td>2.72%</td></tr>
+<tr><td>ORCL</td><td>2.72%</td></tr>
+<tr><td>MSFT</td><td>2.67%</td></tr>
+<tr><td>HD</td><td>2.37%</td></tr>
+<tr><td>INTC</td><td>2.33%</td></tr>
+<tr><td>MDLZ</td><td>2.25%</td></tr>
+<tr><td>DIS</td><td>2.17%</td></tr>
+<tr><td>DHR</td><td>1.93%</td></tr>
+<tr><td>C</td><td>1.69%</td></tr>
+<tr><td>NFLX</td><td>1.63%</td></tr>
+<tr><td>GE</td><td>1.63%</td></tr>
+<tr><td>TROW</td><td>1.61%</td></tr>
+<tr><td>NSC</td><td>1.55%</td></tr>
+<tr><td>USB</td><td>1.55%</td></tr>
+<tr><td>CRM</td><td>1.50%</td></tr>
+<tr><td>CVS</td><td>1.40%</td></tr>
+<tr><td>NIO</td><td>1.32%</td></tr>
+<tr><td>IBM</td><td>1.30%</td></tr>
+<tr><td>QCOM</td><td>1.24%</td></tr>
+<tr><td>NKE</td><td>1.13%</td></tr>
+<tr><td>DE</td><td>1.07%</td></tr>
+<tr><td>SBUX</td><td>1.07%</td></tr>
+<tr><td>MCD</td><td>1.00%</td></tr>
+<tr><td>EL</td><td>0.72%</td></tr>
+<tr><td>BNBUSD</td><td>0.68%</td></tr>
+<tr><td>AAPL</td><td>0.63%</td></tr>
+<tr><td>ITW</td><td>0.53%</td></tr>
+<tr><td>CVX</td><td>0.52%</td></tr>
+<tr><td>EURJPY</td><td>0.51%</td></tr>
+<tr><td>XOM</td><td>0.51%</td></tr>
+<tr><td>SCHW</td><td>0.51%</td></tr>
+<tr><td>DASHUSD</td><td>0.50%</td></tr>
+<tr><td>DOGEUSD</td><td>0.50%</td></tr>
+<tr><td>GBPJPY</td><td>0.50%</td></tr>
+<tr><td>USDCHF</td><td>0.50%</td></tr>
+<tr><td>PNC</td><td>0.47%</td></tr>
+<tr><td>INTU</td><td>0.38%</td></tr>
+<tr><td>FDX</td><td>0.37%</td></tr>
+<tr><td>XMRUSD</td><td>0.26%</td></tr>
+<tr><td>ZECUSD</td><td>0.25%</td></tr>
+<tr><td>PYPL</td><td>0.20%</td></tr>
+<tr><td>AMZN</td><td>0.11%</td></tr>
+<tr><td>TSLA</td><td>0.10%</td></tr>
+<tr><td>TGT</td><td>0.07%</td></tr>
+<tr><td>NOW</td><td>0.01%</td></tr>
+<tr><td>ETCUSD</td><td>0.00%</td></tr>
+<tr><td>MS</td><td>0.00%</td></tr>
+<tr><td>USDJPY</td><td>0.00%</td></tr>
 </table></body></html>
