--- a/results/classifica.html
+++ b/results/classifica.html
@@ -1,143 +1,123 @@
 <html><head><title>Classifica dei Simboli</title></head><body>
 <h1>Classifica dei Simboli in Base alla Probabilità di Crescita</h1>
 <table border='1'><tr><th>Simbolo</th><th>Probabilità</th></tr>
-<tr><td>BCHUSD</td><td>99.98%</td></tr>
-<tr><td>AUDCAD</td><td>99.97%</td></tr>
-<tr><td>EURCAD</td><td>99.96%</td></tr>
-<tr><td>GBPCHF</td><td>99.93%</td></tr>
-<tr><td>EURUSD</td><td>99.93%</td></tr>
-<tr><td>BNBUSD</td><td>99.91%</td></tr>
-<tr><td>LINKUSD</td><td>99.91%</td></tr>
-<tr><td>NEOUSD</td><td>99.91%</td></tr>
-<tr><td>ETCUSD</td><td>99.89%</td></tr>
-<tr><td>USDTUSD</td><td>99.87%</td></tr>
-<tr><td>BTDR</td><td>99.80%</td></tr>
-<tr><td>ADBE</td><td>99.79%</td></tr>
-<tr><td>AUDUSD</td><td>99.78%</td></tr>
-<tr><td>LNTH</td><td>99.75%</td></tr>
-<tr><td>ETHUSD</td><td>99.71%</td></tr>
-<tr><td>EURGBP</td><td>99.65%</td></tr>
-<tr><td>EURCHF</td><td>99.64%</td></tr>
-<tr><td>XAUUSD</td><td>99.59%</td></tr>
-<tr><td>XAGUSD</td><td>99.51%</td></tr>
-<tr><td>XMRUSD</td><td>99.47%</td></tr>
-<tr><td>NZDUSD</td><td>99.44%</td></tr>
-<tr><td>ADAUSD</td><td>99.37%</td></tr>
-<tr><td>EURJPY</td><td>99.37%</td></tr>
-<tr><td>GCUSD</td><td>99.28%</td></tr>
-<tr><td>XTZUSD</td><td>99.27%</td></tr>
-<tr><td>ZECUSD</td><td>99.21%</td></tr>
-<tr><td>EURNZD</td><td>99.19%</td></tr>
-<tr><td>BTCUSD</td><td>99.15%</td></tr>
-<tr><td>ZSUSX</td><td>99.00%</td></tr>
-<tr><td>DOGEUSD</td><td>98.92%</td></tr>
-<tr><td>XRPUSD</td><td>98.92%</td></tr>
-<tr><td>AMGN</td><td>98.87%</td></tr>
-<tr><td>ZCUSX</td><td>98.83%</td></tr>
-<tr><td>EURAUD</td><td>98.67%</td></tr>
-<tr><td>XLMUSD</td><td>98.56%</td></tr>
-<tr><td>CTUSX</td><td>98.55%</td></tr>
-<tr><td>ACN</td><td>98.43%</td></tr>
-<tr><td>AUDJPY</td><td>98.32%</td></tr>
-<tr><td>LTCUSD</td><td>98.14%</td></tr>
-<tr><td>CCUSD</td><td>98.07%</td></tr>
-<tr><td>IBM</td><td>97.62%</td></tr>
-<tr><td>NVDA</td><td>97.57%</td></tr>
-<tr><td>DASHUSD</td><td>97.55%</td></tr>
-<tr><td>GBPUSD</td><td>97.28%</td></tr>
-<tr><td>QCOM</td><td>97.06%</td></tr>
-<tr><td>TRXUSD</td><td>96.83%</td></tr>
-<tr><td>GBPJPY</td><td>96.62%</td></tr>
-<tr><td>GBPJPY</td><td>96.62%</td></tr>
-<tr><td>EOSUSD</td><td>96.55%</td></tr>
-<tr><td>ATOMUSD</td><td>96.46%</td></tr>
-<tr><td>MSFT</td><td>96.12%</td></tr>
-<tr><td>MCD</td><td>94.65%</td></tr>
-<tr><td>GOOGL</td><td>94.54%</td></tr>
-<tr><td>CME</td><td>9.78%</td></tr>
-<tr><td>JPM</td><td>6.91%</td></tr>
-<tr><td>AON</td><td>6.62%</td></tr>
-<tr><td>AEP</td><td>6.44%</td></tr>
-<tr><td>ADP</td><td>5.30%</td></tr>
-<tr><td>MRK</td><td>5.10%</td></tr>
-<tr><td>AMZN</td><td>4.11%</td></tr>
-<tr><td>EW</td><td>3.65%</td></tr>
-<tr><td>TMUS</td><td>3.54%</td></tr>
-<tr><td>CVS</td><td>3.48%</td></tr>
-<tr><td>TJX</td><td>3.41%</td></tr>
-<tr><td>CSCO</td><td>3.39%</td></tr>
-<tr><td>ABT</td><td>3.20%</td></tr>
-<tr><td>CAT</td><td>3.17%</td></tr>
-<tr><td>CHFJPY</td><td>3.17%</td></tr>
-<tr><td>EL</td><td>2.96%</td></tr>
-<tr><td>TSLA</td><td>2.89%</td></tr>
-<tr><td>RBUSD</td><td>2.77%</td></tr>
-<tr><td>T</td><td>2.75%</td></tr>
-<tr><td>BKNG</td><td>2.67%</td></tr>
-<tr><td>SCHL</td><td>2.66%</td></tr>
-<tr><td>NAAS</td><td>2.54%</td></tr>
-<tr><td>SYK</td><td>2.54%</td></tr>
-<tr><td>MMC</td><td>2.48%</td></tr>
-<tr><td>CVX</td><td>2.41%</td></tr>
-<tr><td>FIS</td><td>2.39%</td></tr>
-<tr><td>SO</td><td>2.34%</td></tr>
-<tr><td>LMT</td><td>2.24%</td></tr>
-<tr><td>V</td><td>2.15%</td></tr>
-<tr><td>OJUSX</td><td>2.11%</td></tr>
-<tr><td>XOM</td><td>2.00%</td></tr>
-<tr><td>ORCL</td><td>1.99%</td></tr>
-<tr><td>INTU</td><td>1.98%</td></tr>
-<tr><td>NRG</td><td>1.81%</td></tr>
-<tr><td>USDJPY</td><td>1.77%</td></tr>
-<tr><td>AXP</td><td>1.73%</td></tr>
-<tr><td>DE</td><td>1.73%</td></tr>
-<tr><td>WMT</td><td>1.58%</td></tr>
-<tr><td>GE</td><td>1.51%</td></tr>
-<tr><td>NIO</td><td>1.49%</td></tr>
-<tr><td>BMY</td><td>1.42%</td></tr>
-<tr><td>PEP</td><td>1.40%</td></tr>
-<tr><td>DUK</td><td>1.40%</td></tr>
-<tr><td>NFLX</td><td>1.34%</td></tr>
-<tr><td>HD</td><td>1.34%</td></tr>
-<tr><td>NKE</td><td>1.28%</td></tr>
-<tr><td>USDCHF</td><td>1.20%</td></tr>
-<tr><td>META</td><td>1.19%</td></tr>
-<tr><td>COST</td><td>1.15%</td></tr>
-<tr><td>USDCAD</td><td>1.10%</td></tr>
-<tr><td>NSC</td><td>1.09%</td></tr>
-<tr><td>LOW</td><td>1.05%</td></tr>
-<tr><td>MS</td><td>1.02%</td></tr>
-<tr><td>TGT</td><td>1.02%</td></tr>
-<tr><td>JNJ</td><td>0.91%</td></tr>
-<tr><td>DIS</td><td>0.76%</td></tr>
-<tr><td>LLY</td><td>0.69%</td></tr>
-<tr><td>AAPL</td><td>0.61%</td></tr>
-<tr><td>CL</td><td>0.59%</td></tr>
-<tr><td>APD</td><td>0.56%</td></tr>
-<tr><td>NOW</td><td>0.49%</td></tr>
-<tr><td>ICE</td><td>0.38%</td></tr>
-<tr><td>PFE</td><td>0.37%</td></tr>
-<tr><td>USB</td><td>0.29%</td></tr>
-<tr><td>ADI</td><td>0.24%</td></tr>
-<tr><td>PNC</td><td>0.23%</td></tr>
-<tr><td>CADJPY</td><td>0.19%</td></tr>
-<tr><td>KO</td><td>0.19%</td></tr>
-<tr><td>GS</td><td>0.18%</td></tr>
-<tr><td>PYPL</td><td>0.15%</td></tr>
-<tr><td>HON</td><td>0.13%</td></tr>
-<tr><td>INTC</td><td>0.11%</td></tr>
-<tr><td>BDX</td><td>0.09%</td></tr>
-<tr><td>ZTS</td><td>0.08%</td></tr>
-<tr><td>CRM</td><td>0.08%</td></tr>
-<tr><td>GM</td><td>0.06%</td></tr>
-<tr><td>PSA</td><td>0.05%</td></tr>
-<tr><td>HE</td><td>0.05%</td></tr>
-<tr><td>TROW</td><td>0.04%</td></tr>
-<tr><td>ITW</td><td>0.03%</td></tr>
-<tr><td>C</td><td>0.03%</td></tr>
-<tr><td>SBUX</td><td>0.02%</td></tr>
-<tr><td>FDX</td><td>0.02%</td></tr>
-<tr><td>SCHW</td><td>0.02%</td></tr>
-<tr><td>D</td><td>0.01%</td></tr>
-<tr><td>PLD</td><td>0.00%</td></tr>
+<tr><td>BNBUSD</td><td>100.00%</td></tr>
+<tr><td>BRK.A</td><td>100.00%</td></tr>
+<tr><td>DOGEUSD</td><td>100.00%</td></tr>
+<tr><td>ETCUSD</td><td>100.00%</td></tr>
+<tr><td>EURGBP</td><td>100.00%</td></tr>
+<tr><td>XMRUSD</td><td>100.00%</td></tr>
+<tr><td>ZECUSD</td><td>100.00%</td></tr>
+<tr><td>EURJPY</td><td>100.00%</td></tr>
+<tr><td>EURUSD</td><td>100.00%</td></tr>
+<tr><td>MDT</td><td>99.47%</td></tr>
+<tr><td>MO</td><td>99.37%</td></tr>
+<tr><td>BLK</td><td>99.00%</td></tr>
+<tr><td>DASHUSD</td><td>99.00%</td></tr>
+<tr><td>NEE</td><td>98.99%</td></tr>
+<tr><td>VZ</td><td>98.87%</td></tr>
+<tr><td>GBPUSD</td><td>98.43%</td></tr>
+<tr><td>ADBE</td><td>98.43%</td></tr>
+<tr><td>AUDUSD</td><td>97.76%</td></tr>
+<tr><td>GBPJPY</td><td>97.71%</td></tr>
+<tr><td>NZDUSD</td><td>97.50%</td></tr>
+<tr><td>ANTM</td><td>96.96%</td></tr>
+<tr><td>MSFT</td><td>96.35%</td></tr>
+<tr><td>IBM</td><td>95.52%</td></tr>
+<tr><td>USDTUSD</td><td>94.50%</td></tr>
+<tr><td>GOOGL</td><td>94.40%</td></tr>
+<tr><td>BA</td><td>93.53%</td></tr>
+<tr><td>NVDA</td><td>93.43%</td></tr>
+<tr><td>MCD</td><td>93.13%</td></tr>
+<tr><td>ACN</td><td>88.77%</td></tr>
+<tr><td>PM</td><td>84.58%</td></tr>
+<tr><td>QCOM</td><td>72.34%</td></tr>
+<tr><td>AMGN</td><td>69.43%</td></tr>
+<tr><td>CVX</td><td>48.91%</td></tr>
+<tr><td>XOM</td><td>46.95%</td></tr>
+<tr><td>BKNG</td><td>42.59%</td></tr>
+<tr><td>AMZN</td><td>40.83%</td></tr>
+<tr><td>NIO</td><td>37.71%</td></tr>
+<tr><td>NOW</td><td>35.44%</td></tr>
+<tr><td>NRG</td><td>34.98%</td></tr>
+<tr><td>TSLA</td><td>32.69%</td></tr>
+<tr><td>GE</td><td>32.17%</td></tr>
+<tr><td>USDCAD</td><td>31.21%</td></tr>
+<tr><td>DE</td><td>30.95%</td></tr>
+<tr><td>AON</td><td>19.54%</td></tr>
+<tr><td>NFLX</td><td>18.12%</td></tr>
+<tr><td>CVS</td><td>16.03%</td></tr>
+<tr><td>AEP</td><td>15.53%</td></tr>
+<tr><td>META</td><td>15.38%</td></tr>
+<tr><td>CME</td><td>15.00%</td></tr>
+<tr><td>LMT</td><td>13.84%</td></tr>
+<tr><td>MMC</td><td>13.28%</td></tr>
+<tr><td>UNH</td><td>12.64%</td></tr>
+<tr><td>ABT</td><td>11.00%</td></tr>
+<tr><td>ISRG</td><td>10.54%</td></tr>
+<tr><td>EW</td><td>10.22%</td></tr>
+<tr><td>SO</td><td>9.31%</td></tr>
+<tr><td>TGT</td><td>8.69%</td></tr>
+<tr><td>ADP</td><td>8.57%</td></tr>
+<tr><td>CSCO</td><td>8.51%</td></tr>
+<tr><td>KO</td><td>8.50%</td></tr>
+<tr><td>V</td><td>7.88%</td></tr>
+<tr><td>NKE</td><td>7.82%</td></tr>
+<tr><td>AAPL</td><td>7.52%</td></tr>
+<tr><td>CAT</td><td>7.27%</td></tr>
+<tr><td>MMM</td><td>7.01%</td></tr>
+<tr><td>NSC</td><td>6.90%</td></tr>
+<tr><td>ORCL</td><td>6.69%</td></tr>
+<tr><td>GS</td><td>5.47%</td></tr>
+<tr><td>TMUS</td><td>5.00%</td></tr>
+<tr><td>ITW</td><td>4.54%</td></tr>
+<tr><td>CI</td><td>4.46%</td></tr>
+<tr><td>LOW</td><td>4.14%</td></tr>
+<tr><td>SPGI</td><td>4.09%</td></tr>
+<tr><td>ICE</td><td>4.00%</td></tr>
+<tr><td>GM</td><td>3.99%</td></tr>
+<tr><td>INTC</td><td>3.92%</td></tr>
+<tr><td>DIS</td><td>3.64%</td></tr>
+<tr><td>MRK</td><td>3.57%</td></tr>
+<tr><td>TJX</td><td>3.51%</td></tr>
+<tr><td>COST</td><td>3.07%</td></tr>
+<tr><td>DUK</td><td>3.00%</td></tr>
+<tr><td>ZTS</td><td>2.60%</td></tr>
+<tr><td>EL</td><td>2.53%</td></tr>
+<tr><td>CRM</td><td>2.30%</td></tr>
+<tr><td>LLY</td><td>2.24%</td></tr>
+<tr><td>APD</td><td>2.19%</td></tr>
+<tr><td>DHR</td><td>2.06%</td></tr>
+<tr><td>D</td><td>2.03%</td></tr>
+<tr><td>JNJ</td><td>2.02%</td></tr>
+<tr><td>PLD</td><td>2.00%</td></tr>
+<tr><td>ADI</td><td>2.00%</td></tr>
+<tr><td>T</td><td>2.00%</td></tr>
+<tr><td>WMT</td><td>2.00%</td></tr>
+<tr><td>INTU</td><td>2.00%</td></tr>
+<tr><td>MDLZ</td><td>1.69%</td></tr>
+<tr><td>AXP</td><td>1.66%</td></tr>
+<tr><td>JPM</td><td>1.64%</td></tr>
+<tr><td>MS</td><td>1.56%</td></tr>
+<tr><td>SCHW</td><td>1.17%</td></tr>
+<tr><td>PSA</td><td>1.16%</td></tr>
+<tr><td>C</td><td>1.10%</td></tr>
+<tr><td>PYPL</td><td>1.08%</td></tr>
+<tr><td>PNC</td><td>1.07%</td></tr>
+<tr><td>SBUX</td><td>1.04%</td></tr>
+<tr><td>USB</td><td>1.02%</td></tr>
+<tr><td>PEP</td><td>0.79%</td></tr>
+<tr><td>BMY</td><td>0.79%</td></tr>
+<tr><td>FDX</td><td>0.78%</td></tr>
+<tr><td>TROW</td><td>0.76%</td></tr>
+<tr><td>CL</td><td>0.58%</td></tr>
+<tr><td>USDCHF</td><td>0.55%</td></tr>
+<tr><td>BDX</td><td>0.55%</td></tr>
+<tr><td>TXN</td><td>0.53%</td></tr>
+<tr><td>HD</td><td>0.51%</td></tr>
+<tr><td>USDJPY</td><td>0.30%</td></tr>
+<tr><td>FIS</td><td>0.15%</td></tr>
+<tr><td>HON</td><td>0.06%</td></tr>
+<tr><td>PFE</td><td>0.05%</td></tr>
+<tr><td>SYK</td><td>0.00%</td></tr>
 </table></body></html>
